traduction fixes and covering filters conf absence in gallery

--- a/admin/themes/default/theme.css
+++ b/admin/themes/default/theme.css
@@ -8015,7 +8015,7 @@ color:#FF7B00;
 /* Filters options */
 .filters-grid{
   display: grid;
-  grid-template-columns: 150px 118px 25px;
+  grid-template-columns: 200px 118px 25px;
   margin-bottom: 0px !important;
 }
 .select-views{
@@ -8029,7 +8029,7 @@ color:#FF7B00;
 .select-views-arrow{
   display: flex;
   position: absolute;
-  margin-left: 249.9px;
+  margin-left: 299.9px;
   margin-top: 5px;
   pointer-events: none;
 }
